# codeflux

./: Cargo.toml  README.md
crates/codeflux-cli/: Cargo.toml
crates/codeflux-cli/src/: main.rs
crates/codeflux-core/: Cargo.toml
crates/codeflux-core/src/: filter.rs  graph.rs  index.rs  intern.rs  lib.rs
crates/codeflux-ingest/: Cargo.toml
crates/codeflux-ingest/src/: builder.rs  lib.rs  parser.rs
crates/codeflux-query/: Cargo.toml
crates/codeflux-query/src/: affected.rs  coverage.rs  lib.rs  treesitter.rs  untested.rs
gem/codeflux-trace/: codeflux-trace.gemspec
gem/codeflux-trace/lib/codeflux/: filter.rb  minitest.rb  trace.rb  writer.rb
integration-test/: .gitignore
integration-test/app/models/: calculator.rb
integration-test/test/: test_helper.rb
integration-test/test/models/: calculator_test.rb
test-fixtures/: corrupt.cft  simple.cft
